MDEV-21348: Fix for memory leak in Storage-Engine Independent Column Compression